--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -512,7 +512,16 @@ select.phone-selector {
   justify-content: center;
   align-items: center;
 }
-
+/* scrollbar */
+body::-webkit-scrollbar {
+  width: 0.5rem;
+}
+body::-webkit-scrollbar-track {
+  background: #1e1e24;
+}
+body::-webkit-scrollbar-thumb {
+  background: #6649b8;
+}
 /* Defaults
 .App {
 }
