--- a/web-frontend/src/components/nav/nav.css
+++ b/web-frontend/src/components/nav/nav.css
@@ -32,7 +32,7 @@
 .hamburger-icon {
   display: flex;
   justify-content: center;
-  width: 7rem;
+  width: 6rem;
   cursor: pointer;
 }
 .hamburger-icon > img {
@@ -48,7 +48,7 @@ img.dropdown-arrow {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 7rem;
+  width: 6rem;
   display: none;
   /* margin-left: 1rem; */
 }
@@ -65,7 +65,7 @@ img.dropdown-arrow {
 }
 .navbar {
   color: #fff;
-  width: 7rem;
+  width: 6rem;
   height: 100vh;
   position: fixed;
   background-color: #1f447c;
@@ -82,16 +82,27 @@ img.dropdown-arrow {
 }
 
 .navbar-sub-nav {
-  display: none;
+  /* display: none; */
   opacity: 0;
+  visibility: hidden;
   height: 0px;
   list-style: none;
   font-size: 1.5rem;
   padding-left: 0px;
-  margin: 14px 0 35px 0px;
   transition: 200ms ease;
+  border-top: 1px solid #21376c;
+  border-bottom: 1px solid #21376c;
 }
 
+.parent-link:hover .navbar-sub-nav {
+  /* display: block; */
+  padding: 5px 0 5px 0px;
+  visibility: visible;
+  opacity: 1;
+  height: auto;
+  border-top: 1px solid #21376c;
+  border-bottom: 1px solid #21376c;
+}
 .nav-link-active {
   background-color: #a2c6fc30;
 }
@@ -109,7 +120,7 @@ img.dropdown-arrow {
 .nav-sub-item {
   /* width: 100%; */
   /* margin-bottom: 15px; */
-  padding-left: 7rem;
+  padding-left: 6rem;
   padding-top: 0.8rem;
   padding-bottom: 0.8rem;
   display: flex;
@@ -118,25 +129,31 @@ img.dropdown-arrow {
 .nav-sub-item:last-child {
   margin-top: auto;
 }
-.parent-link:hover .navbar-sub-nav {
-  display: block;
-  opacity: 1;
-  height: auto;
-}
 
 .nav-item {
   width: 100%;
+  /* border-bottom: 1px solid black; */
+  /* border-top: 1px solid black; */
 }
 .nav-item:last-child {
   margin-top: auto;
+  /* border-top: 0px; */
+}
+.nav-item:first-child {
+  margin-top: auto;
+  /* border-bottom: 0px; */
 }
 .nav-link {
   display: flex;
   align-items: center;
-  height: 5rem;
+  height: 5.3rem;
   color: #fff;
   font-size: 1.8rem;
   text-decoration: none;
+  margin-bottom: 2px;
+}
+.nav-link:last-child {
+  margin-bottom: 0px;
 }
 .nav-link:hover {
   /* background-color: #0f2e5d; */
@@ -146,17 +163,27 @@ img.dropdown-arrow {
   transition: background-color 500ms ease;
   background-color: #a2c6fc30;
 }
+.sub-nav-link-icon {
+  transition: 200ms ease;
+}
 .sub-nav-link:hover {
   color: #ffe08c;
+  /* background-color: #a2c6fc30; */
+}
+.sub-nav-link:hover .sub-nav-link-icon {
+  /* margin-left: 10px; */
+  transform: translateX(10px);
   /* background-color: #a2c6fc30; */
 }
 .sub-nav-link {
   color: #fff;
   text-decoration: none;
-  width: 150px;
+  /* width: 150px; */
+  width: 100%;
 }
 .sub-link-text {
-  /* width: 150px; */
+  width: 150px;
+  /* white-space: nowrap; */
 }
 .link-text {
   display: none;
@@ -189,11 +216,11 @@ img.dropdown-arrow {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 7rem;
+  width: 6rem;
   /* margin-left: 1rem; */
 }
 .nav-icon > img {
-  width: 30px;
+  width: 25px;
 }
 @media only screen and (min-width: 600px) {
 }
