--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -135,6 +135,9 @@
 .-full-width {
   width: 100%;
 }
+.-full-height {
+  height: 100%;
+}
 .-display-none {
   display: none;
 }
@@ -514,7 +517,7 @@ select.phone-selector {
 }
 /* scrollbar */
 body::-webkit-scrollbar {
-  width: 0.5rem;
+  width: 1rem;
 }
 body::-webkit-scrollbar-track {
   background: #1e1e24;
@@ -522,6 +525,18 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
   background: #6649b8;
 }
+
+/* theme switch (night mode) */
+.theme-switch > img {
+  cursor: pointer;
+}
+.dark-mode-icon {
+  width: 2.6rem;
+}
+.light-mode-icon {
+  width: 3.1rem;
+}
+
 /* Defaults
 .App {
 }
