--- a/web-frontend/src/components/nav/nav.css
+++ b/web-frontend/src/components/nav/nav.css
@@ -1,3 +1,6 @@
+.navbar + .navbar-page-container {
+  margin-left: 6rem;
+}
 .hamburger {
   transform: rotate(0deg);
   transition: transform 200ms;
