--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -75,6 +75,9 @@
   margin-bottom: 90px;
 }
 /* Margin Top */
+.-mt-auto {
+  margin-top: auto;
+}
 .-mt-5 {
   margin-top: 5px;
 }
@@ -365,18 +368,15 @@ button.primary-btn:focus {
   outline-offset: 1px;
   outline: 0;
 }
-
-/* outline button */
-/* primary-outline */
 button.primary-btn-outline {
-  color: var(--primary-purple);
-  background: var(--primary-white);
-  border: 2px solid var(--primary-purple);
+  color: var(--primary-accent);
+  background: transparent;
+  /* border: 2px solid var(--primary-accent); */
 }
 button.primary-btn-outline:hover {
   color: var(--primary-white);
-  background: var(--dark-purple);
-  border: 2px solid var(--dark-purple);
+  /* background: var(--dark-purple); */
+  /* border: 2px solid var(--dark-purple); */
 }
 button.primary-btn-outline:focus {
   outline: 2px solid var(--secondary-purple);
@@ -547,7 +547,28 @@ body::-webkit-scrollbar-thumb {
 .light-mode-icon {
   width: 3.1rem;
 }
-
+/* Login Button */
+.auth-btn-wrapper {
+  padding: 10px 10px 10px 10px;
+  background-color: #0f2e5d;
+}
+.navbar:hover button.login-btn,
+.navbar:hover button.signup-btn {
+  visibility: visible;
+  width: 50%;
+  opacity: 1;
+}
+.auth-btn-wrapper > button {
+  visibility: hidden;
+  opacity: 0;
+  width: 0;
+  transition: 200ms ease;
+}
+button.login-btn {
+}
+button.signup-btn {
+  margin-right: 10px;
+}
 /* Defaults
 .App {
 }
