--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -541,21 +541,31 @@ body::-webkit-scrollbar-thumb {
   position: absolute;
   transition: 300ms ease;
 }
+.navbar:hover .dark-mode-icon {
+  width: 3.3rem;
+}
+.navbar:hover .light-mode-icon {
+  width: 3.8rem;
+}
 .dark-mode-icon {
-  width: 2.6rem;
+  width: 2.2rem;
 }
 .light-mode-icon {
-  width: 3.1rem;
+  width: 2.6rem;
 }
 /* Login Button */
 .auth-btn-wrapper {
-  padding: 10px 10px 10px 10px;
+  opacity: 0;
+  padding: 22px 10px 10px 10px;
   background-color: #0f2e5d;
 }
 .navbar:hover button.login-btn,
 .navbar:hover button.signup-btn {
   visibility: visible;
   width: 50%;
+  opacity: 1;
+}
+.navbar:hover .auth-btn-wrapper {
   opacity: 1;
 }
 .auth-btn-wrapper > button {
