--- a/web-frontend/src/components/nav/nav.css
+++ b/web-frontend/src/components/nav/nav.css
@@ -1,27 +1,27 @@
 .navbar + .navbar-page-container {
-  margin-left: 6rem;
+  margin-left: 4.7rem;
 }
 .hamburger {
   transform: rotate(0deg);
   transition: transform 200ms;
   font-size: 2rem;
-  padding: 15px 0px;
+  padding: 10px 0px;
   height: 28px;
   display: flex;
   align-items: center;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   margin-top: 30px;
   background-color: #0f2e5d;
 }
 .hamburger-icon {
   display: flex;
   justify-content: center;
-  width: 6rem;
+  width: 4.7rem;
   cursor: pointer;
   position: relative;
 }
 .hamburger-icon > img {
-  width: 20px;
+  width: 16px;
   height: 20px;
   position: absolute;
   transition: 300ms ease;
@@ -61,17 +61,6 @@
   font-family: Poppins;
   font-weight: 300;
 }
-.hamburger {
-  transform: rotate(0deg);
-  transition: transform 200ms;
-  font-size: 2rem;
-  padding: 15px 0px;
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
-  margin-top: 30px;
-  background-color: #0f2e5d;
-}
 img.dropdown-arrow {
   width: 12px;
 }
@@ -90,7 +79,7 @@ img.dropdown-arrow {
   display: flex;
   flex-direction: column;
   color: #fff;
-  width: 6rem;
+  width: 4.7rem;
   height: 100vh;
   position: fixed;
   background-color: #1f447c;
@@ -101,11 +90,12 @@ img.dropdown-arrow {
 }
 .navbar-nav {
   list-style: none;
-  padding: 0;
+  padding: 10px 0;
   margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* background-color: blue; */
 }
 
 .parent-link {
@@ -143,10 +133,11 @@ img.dropdown-arrow {
   }
 }
 .nav-link-active {
+  color: #ffe08c !important;
   background-color: #a2c6fc30;
 }
 .sub-nav-link-active > li.nav-sub-item {
-  background-color: #a2c6fc30;
+  /* background-color: #a2c6fc30; */
   color: #ffe08c;
 }
 .sub-nav-link-active a {
@@ -155,7 +146,7 @@ img.dropdown-arrow {
 .nav-sub-item:hover {
   /* background-color: #000; */
   /* background-color: #0f2e5d; */
-  background-color: #a2c6fc30;
+  /* background-color: #a2c6fc30; */
 }
 .nav-sub-item {
   /* width: 100%; */
@@ -186,7 +177,7 @@ img.dropdown-arrow {
 .nav-link {
   display: flex;
   align-items: center;
-  height: 5.3rem;
+  height: 4.7rem;
   color: #fff;
   font-size: 1.8rem;
   text-decoration: none;
@@ -282,11 +273,11 @@ img.dropdown-arrow {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 6rem;
+  width: 4.7rem;
   /* margin-left: 1rem; */
 }
 .nav-icon > img {
-  width: 25px;
+  width: 20px;
 }
 @media only screen and (min-width: 600px) {
 }
