--- a/web-frontend/src/components/text/text.css
+++ b/web-frontend/src/components/text/text.css
@@ -2,7 +2,7 @@ h1.fancy-heading {
   font-size: 3rem;
   font-weight: 500;
   margin-bottom: 2px;
-  color: var(--primary-black);
+  color: var(--fancy-heading-color);
 }
 .fancy-heading-decorator {
   position: relative;
