--- a/web-frontend/src/components/nav/nav.css
+++ b/web-frontend/src/components/nav/nav.css
@@ -11,7 +11,15 @@
   align-items: center;
   /* margin-bottom: 20px; */
   margin-top: 30px;
-  background-color: #0f2e5d;
+  /* background-color: var(--nav-highlight); */
+  background-color: var(--auth-background);
+  border-top: 1px solid var(--auth-border-color);
+  border-bottom: 1px solid var(--auth-border-color);
+}
+.hamburger-lbl {
+  margin-left: 0.5rem;
+  font-weight: 400;
+  display: none;
 }
 .hamburger-icon {
   display: flex;
@@ -73,7 +81,7 @@ img.dropdown-arrow {
   /* margin-left: 1rem; */
 }
 .navbar:hover .hamburger {
-  transform: rotate(-180);
+  /* transform: rotate(-180deg); */
 }
 .navbar {
   display: flex;
@@ -82,7 +90,7 @@ img.dropdown-arrow {
   width: 4.7rem;
   height: 100vh;
   position: fixed;
-  background-color: #1f447c;
+  background-color: var(--nav-background);
   transition: width 200ms ease;
   top: 0;
   z-index: 999;
@@ -90,7 +98,7 @@ img.dropdown-arrow {
 }
 .navbar-nav {
   list-style: none;
-  padding: 10px 0;
+  padding: 1px 0;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -113,8 +121,8 @@ img.dropdown-arrow {
   padding-left: 0px;
   transition: 200ms ease;
   /* transition-delay: 50ms; */
-  border-top: 1px solid #21376c;
-  border-bottom: 1px solid #21376c;
+  border-top: 1px solid var(--nav-border-sep);
+  border-bottom: 1px solid var(--nav-border-sep);
 }
 .parent-link:hover .navbar-sub-nav {
   /* display: block; */
@@ -123,8 +131,8 @@ img.dropdown-arrow {
   visibility: visible;
   opacity: 1;
   height: auto;
-  border-top: 1px solid #21376c;
-  border-bottom: 1px solid #21376c;
+  border-top: 1px solid var(--nav-border-sep);
+  border-bottom: 1px solid var(--nav-border-sep);
 }
 @keyframes slideIn {
   from {
@@ -133,15 +141,15 @@ img.dropdown-arrow {
   }
 }
 .nav-link-active {
-  color: #ffe08c !important;
-  background-color: #a2c6fc30;
+  color: var(--nav-hover-link-color) !important;
+  background-color: var(--nav-link-hover-background);
 }
 .sub-nav-link-active > li.nav-sub-item {
   /* background-color: #a2c6fc30; */
-  color: #ffe08c;
+  color: var(--nav-hover-link-color);
 }
 .sub-nav-link-active a {
-  color: #ffe08c;
+  color: var(--nav-hover-link-color);
 }
 .nav-sub-item:hover {
   /* background-color: #000; */
@@ -196,7 +204,7 @@ img.dropdown-arrow {
   width: 6rem;
   transition: transform 200ms ease;
   /* margin-left: 1rem; */
-  top: 2.4rem;
+  top: 2rem;
   right: 51px;
   position: absolute;
 }
@@ -211,17 +219,17 @@ img.dropdown-arrow {
 }
 .nav-link:hover {
   /* background-color: #0f2e5d; */
-  color: #ffe08c;
+  color: var(--nav-hover-link-color);
   /* text-decoration: underline; */
   /* font-weight: 600; */
   transition: background-color 200ms ease;
-  background-color: #a2c6fc30;
+  background-color: var(--nav-link-hover-background);
 }
 .sub-nav-link-icon {
   transition: 200ms ease;
 }
 .sub-nav-link:hover {
-  color: #ffe08c;
+  color: var(--nav-hover-link-color);
   /* background-color: #a2c6fc30; */
 }
 .sub-nav-link:hover .sub-nav-link-icon {
@@ -254,7 +262,8 @@ img.dropdown-arrow {
 .navbar:hover .nav-link-icon {
   visibility: visible;
 }
-.navbar:hover .link-text {
+.navbar:hover .link-text,
+.navbar:hover .hamburger-lbl {
   display: block;
 }
 .navbar:hover .nav-link-icon {
