--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -14,6 +14,17 @@
 }
 /* util classes */
 /* Margin Bottom */
+.-mr-50{
+  margin-left: 50px;
+}
+
+.-mr-60{
+  margin-left: 60px;
+}
+
+.-mr-70{
+  margin-left: 70px;
+}
 
 .-ml-70{
   margin-left: 70px;
