--- a/web-frontend/src/pages/index/homepage.css
+++ b/web-frontend/src/pages/index/homepage.css
@@ -1,87 +1,187 @@
-body{
-    background: white; 
-
+.homepage-body {
+  position: static;
+  width: 100%;
+  height: 100%;
 }
 
-.body{
-    position: static;
-    width: 100%;
-    height: 100%;
-    
+.homepage-loginbtn {
+  position: absolute;
+  top: 5%;
+  right: 3%;
 }
 
-.ripple-background{
-    position: absolute;
-    width: 100%;
-    height: 180%;
-    overflow: hidden;
-    bottom:0;
-    right:0;
+@import url('https://fonts.googleapis.com/css?family=Roboto:700');
+@keyframes showTopText {
+  0% {
+    transform: translate3d(0, 100%, 0);
   }
-  
+  40%,
+  60% {
+    transform: translate3d(0, 50%, 0);
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+}
+@keyframes showBottomText {
+  0% {
+    transform: translate3d(0, -100%, 0);
+  }
+  40%,
+  60% {
+    transform: translate3d(0, 30%, 0);
+  }
+  100% {
+    transform: translate3d(0, 0%, 0);
+  }
+}
+.homepage-welcometxt {
+  color: #222;
+  font-family: Roboto, Arial, sans-serif;
+  height: 60vmin;
+  left: 30%;
+  transform: translate(30%, 20%);
+  width: 50vmin;
+}
+.homepage-welcometxt > div {
+  height: 50%;
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+}
+.homepage-welcometxt > div div {
+  font-size: 10vmin;
+  padding: 2vmin 0;
+  position: absolute;
+}
+.homepage-welcometxt > div div span {
+  display: block;
+}
+.homepage-welcometxt > div.welcometxt-top {
+  border-bottom: 1vmin solid #000;
+  top: 0;
+}
+.homepage-welcometxt > div.welcometxt-top div {
+  animation: showTopText 1s;
+  animation-fill-mode: forwards;
+  bottom: 0;
+  transform: translate(0, 100%);
+}
+.homepage-welcometxt > div.welcometxt-top div span {
+  color: #767676;
+}
+.homepage-welcometxt > div.welcometxt-bottom {
+  bottom: 0;
+}
+.homepage-welcometxt > div.welcometxt-bottom div {
+  animation: showBottomText 1s;
+  animation-delay: 1s;
+  animation-fill-mode: forwards;
+  top: 0;
+  transform: translate(0, -100%);
+}
 
-.circle {
+/* start button */
+@keyframes startbtn-effect {
+  0% {
+    left: 10%;
+  }
+  50% {
+    left: 20%;
+  }
+
+  100% {
+    left: 10%;
+  }
+}
+
+.homepage-start-button {
+  position: absolute;
+  left: 10%;
+  animation-name: startbtn-effect;
+  animation-duration: 3s;
+  animation-iteration-count: 2;
+  z-index: 1;
+  text-align: center;
+}
+
+.homepage-startbtnrow {
+  font-size: 20px;
+  margin-right: 5px;
+  width: 20px;
+  height: 15px;
+}
+
+/* bg annimation */
+.homepage-bg-annimation {
+  position: absolute;
+  width: 100%;
+  height: 180%;
+  overflow: hidden;
+  bottom: 0;
+  right: 0;
+}
+
+.hbga-circle {
   position: absolute;
   border-radius: 100%;
-  background: rgb(7, 2, 60);
-  animation: ripple 15s infinite;
+  background: rgb(9, 2, 84);
+  animation: ripple 20s infinite;
   box-shadow: 0px 0px 1px 0px #508fb9;
 }
 
-.small {
-  width: 70;
-  height: 70;
-  right: -100px;
+.circle-small {
+  height: 220px;
+  width: 220px;
   bottom: -100px;
+  right: -100px;
 }
 
-.medium {
-  width: 100;
-  height: 100;
+.circle-medium {
+  height: 350px;
+  width: 350px;
   right: -200px;
   bottom: -200px;
 }
 
-.large {
-  width: 300;
-  height: 300;
-  right: -300px;
+.circle-large {
+  height: 550px;
+  width: 550px;
   bottom: -300px;
+  right: -300px;
 }
 
-.xlarge {
-  width: 500;
-  height: 500;
+.circle-xlarge {
+  height: 750px;
+  width: 750px;
   right: -400px;
   bottom: -400px;
 }
 
-.xxlarge {
-    width: 600;
-    height: 600;
-    right: -500px;
-    bottom: -500px;
-  }
+.circle-xxlargee {
+  width: 950px;
+  height: 950px;
+  bottom: -500px;
+  right: -500px;
+}
 
-
-
-.shade1 {
+.circle-shade1 {
   opacity: 0.2;
 }
-.shade2 {
-  opacity: 0.5;
+.circle-shade2 {
+  opacity: 0.4;
 }
 
-.shade3 {
-  opacity: 0.7;
+.circle-shade3 {
+  opacity: 0.6;
 }
 
-.shade4 {
-  opacity: 0.8;
-}
-
-.shade5 {
+.circle-shade4 {
   opacity: 0.9;
+}
+
+.circle-shade5 {
+  opacity: 1;
 }
 
 @keyframes ripple {
@@ -96,90 +196,4 @@ body{
   100% {
     transform: scale(0.8);
   }
-}
-
-.homepage-loginbtn{
-    position: absolute;
-    top:5%;
-    right: 3%;
-}
-
-
-
-
-
-
-@import url('https://fonts.googleapis.com/css?family=Roboto:700');
-@keyframes showTopText {
-  0% { transform: translate3d(0, 100%, 0); }
-  40%, 60% { transform: translate3d(0, 50%, 0); }
-  100% { transform: translate3d(0, 0, 0); }
-}
-@keyframes showBottomText {
-  0% { transform: translate3d(0, -100%, 0); }
-  40%, 60% { transform: translate3d(0, 30%, 0); }
-  100% { transform: translate3d(0,0%, 0); }
-}
-.animated-title {
-  color: #222;
-  font-family: Roboto, Arial, sans-serif;
-  height: 80vmin;
-  left: 30%;
-  transform: translate(10%,10%);
-  width: 50vmin;
-}
-.animated-title > div {
-  height: 50%;
-  overflow: hidden;
-  position: absolute;
-  width: 100%;
-  
-}
-.animated-title > div div {
-  font-size: 10vmin;
-  padding: 2vmin 0;
-  position: absolute;
-}
-.animated-title > div div span {
-  display: block;
-}
-.animated-title > div.text-top {
-  border-bottom: 1vmin solid #000;
-  top: 0;
-}
-.animated-title > div.text-top div {
-  animation: showTopText 1s;
-  animation-fill-mode: forwards;
-  bottom: 0;
-  transform: translate(0, 100%);
-}
-.animated-title > div.text-top div span {
-  color: #767676;
-}
-.animated-title > div.text-bottom {
-  bottom: 0;
-}
-.animated-title > div.text-bottom div {
-  animation: showBottomText 1s;
-  animation-delay: 1s;
-  animation-fill-mode: forwards;
-  top: 0;
-  transform: translate(0, -100%);
-}
-
-
-@keyframes example {
-    0%   {left:15%;}
-    50%   {left:8%;}
-    
-    100% {left:15%;}
-  }
-
-.start-button{
-    position: absolute;
-    left:10%;
-    animation-name: example;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-
 }
