--- a/web-frontend/src/pages/exkey/exkey.css
+++ b/web-frontend/src/pages/exkey/exkey.css
@@ -101,7 +101,7 @@
   display: grid;
   grid-gap: 20px;
   bottom: -130px;
-  margin-left: 50px;
+  margin-left: 80px;
   font-size: 1.5rem;
 }
 
@@ -196,19 +196,38 @@
 }
 
 .magnify_banner {
+  padding-top: 10px;
+  padding-left: 25px;
+  padding-right: 25px;
   margin-top: -20px;
   animation: swing ease-in-out 1s infinite alternate;
   transform-origin: center -20px;
   float: left;
-  box-shadow: 5px 5px 10px #a0793d;
+  /* box-shadow: 5px 5px 8px #a0793d; */
+  height: 80px;
+  border-top: 13px solid #b89675;
+  border-right: 13px solid #7b654f;
+  border-bottom: 13px solid #7b654f;
+  border-left: 13px solid #a67c52;
+  /* box-shadow: 4px 4px 0 0 rgba(189, 166, 72, 0.6); */
+  background-color: #ffefd5;
+  z-index: 1;
 }
 
 .magnify_barChart {
-  margin-top: 40px;
+  margin-top: -10px;
   animation: swing ease-in-out 1s infinite alternate;
   transform-origin: center -20px;
   float: left;
-  box-shadow: 5px 5px 10px #a0793d;
+  /* box-shadow: 5px 5px 8px #a0793d; */
+  height: 80px;
+  border-top: 13px solid #b89675;
+  border-right: 13px solid #7b654f;
+  border-bottom: 13px solid #7b654f;
+  border-left: 13px solid #a67c52;
+  /* box-shadow: 4px 4px 0 0 rgba(189, 166, 72, 0.6); */
+  background-color: #ffefd5;
+  z-index: 1;
 }
 
 .analysing_banner {
@@ -323,7 +342,7 @@
 }
 
 .wrapper_progressBar {
-  width: 520px;
+  width: 620px;
   max-width: 50%;
   display: grid;
   margin-top: 10%;
