--- a/web-frontend/src/pages/exkey/exkey.css
+++ b/web-frontend/src/pages/exkey/exkey.css
@@ -192,6 +192,7 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: 365px;
+  margin-right: 110px;
   display: grid;
 }
 
@@ -230,13 +231,20 @@
   z-index: 1;
 }
 
-.analysing_banner {
+.analysing_banner_left {
   display: flex;
   flex-wrap: wrap;
   opacity: 0.8;
   position: absolute;
-  left: 300px;
-  grid-gap: 130px;
+  margin-left: -180px;
+}
+
+.analysing_banner_right {
+  display: flex;
+  flex-wrap: wrap;
+  opacity: 0.8;
+  position: absolute;
+  margin-left: -180px;
 }
 
 @keyframes swing {
@@ -247,39 +255,20 @@
     transform: rotate(-3deg);
   }
 }
-.user-description {
-  overflow: hidden;
-  font-size: 2rem;
-  white-space: nowrap;
-  animation: typewriter_userDescription 4s steps(20) 500ms normal both,
-    blinkTextCursor 500ms steps(20) infinite normal;
-  border-right: 2px solid rgba(255, 255, 255, 0.75);
-  height: 20px;
-  display: grid;
-  flex-wrap: wrap;
-}
-
-@keyframes typewriter_userDescription {
-  from {
-    width: 0;
-  }
-  to {
-    width: 25em;
-  }
-}
-@keyframes blinkTextCursor {
-  from {
-    border-right-color: black;
-  }
-  to {
-    border-right-color: transparent;
-  }
-}
 
 .loader_progress {
   position: absolute;
   top: 50%;
-  left: 45%;
+  left: 48%;
+}
+@media screen and (min-width: 150vh) {
+  .line_loader {
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    right: -150px;
+    bottom: -170px;
+  }
 }
 
 .line_progress {
@@ -287,9 +276,9 @@
   border-radius: 10px;
   display: inline-block;
   transform-origin: center center;
-  margin: 0 10px;
-  width: 3px;
-  height: 50px;
+  margin: 0 5px;
+  width: 2px;
+  height: 15px;
 }
 
 .line_progress:nth-child(1) {
@@ -337,7 +326,7 @@
     width: 0;
   }
   to {
-    width: 60%;
+    width: 49%;
   }
 }
 
@@ -346,61 +335,55 @@
   max-width: 50%;
   display: grid;
   margin-top: 10%;
-  margin-left: -15%;
+  margin-left: 0%;
 }
 
-.progress-bar {
+/* Circular rect loader */
+
+.loader-5 {
+  width: 75px;
+  height: 75px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.loader-5-rect {
   height: 30px;
-  width: 100%;
-  background-color: #bfada3;
-  border-radius: 20px;
-  overflow: hidden;
-  box-shadow: 2px 0 10px inset rgba(0, 0, 0, 0.2);
-  position: relative;
+  width: 30px;
+  background: var(--pos-green);
+  animation-name: flash;
+  animation-duration: 0.9s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
 
-* + .progress-bar {
-  margin-top: 2rem;
+.loader-5-rect-1 {
+  animation-delay: 0s;
 }
 
-.bar_loading {
-  width: 0;
-  height: 100%;
-  background-color: var(--pos-green);
-
-  /*Lollipop background gradient*/
-  background-image: linear-gradient(
-    -45deg,
-    rgba(255, 255, 255, 0.2) 25%,
-    transparent 25%,
-    transparent 50%,
-    rgba(255, 255, 255, 0.2) 50%,
-    rgba(255, 255, 255, 0.2) 75%,
-    transparent 75%,
-    transparent
-  );
-
-  background-size: 30px 30px;
-  animation: move 2s linear infinite;
-  box-shadow: 2px 0 10px inset rgba(0, 0, 0, 0.2);
-  transition: width 2s ease-out;
+.loader-5-rect-2 {
+  animation-delay: 0.3s;
 }
 
-/*Lollipop background gradient animation*/
-@keyframes move {
+.loader-5-rect-3 {
+  animation-delay: 0.6s;
+}
+
+.loader-5-rect-4 {
+  animation-delay: 0.4s;
+}
+
+@keyframes flash {
   0% {
-    background-position: 0 0;
+    background: white;
   }
-  100% {
-    background-position: 30px 30px;
-  }
-}
 
-.perc {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #fff;
-  font-weight: bold;
+  1% {
+    background: var(--color);
+  }
+
+  51% {
+    background: white;
+  }
 }
