--- a/web-frontend/src/pages/login/login.css
+++ b/web-frontend/src/pages/login/login.css
@@ -1,5 +1,22 @@
+.login-btn-link {
+  text-decoration: none;
+  color: var(--primary-white) !important;
+}
+.login-btn-link.active {
+  text-decoration: none;
+  position: relative;
+  color: var(--primary-white) !important;
+  /* right: 0; */
+  /* top: -0.5px; */
+  /* height: calc(100% + 1px); */
+  /* width: 30%; */
+  /* border-radius: 5px; */
+}
+.login-page-container {
+  margin-left: 6%;
+}
 .login-page-container > div:first-child {
-  margin-right: 80px;
+  /* margin-right: 80px; */
 }
 .login-title,
 .login-moto {
@@ -11,7 +28,7 @@
 }
 .login-card {
   padding: 40px 50px;
-  width: 50%;
+  width: 30%;
   max-width: 400px;
 }
 .login-header {
@@ -63,11 +80,34 @@
   margin-top: 8px;
   text-decoration: none;
 }
+.login-banner-wrapper {
+  padding: 0 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* margin-left: 20%; */
+}
 .login-banner {
   margin-top: 50px;
   /* margin-left: 70px; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 80%;
 }
 .login-banner > img {
-  width: 90%;
+  width: 80%;
+  min-width: 300px;
+}
+@media only screen and (max-width: 1000px) {
+  .login-banner-wrapper-container {
+    display: none;
+  }
+  .login-card {
+    width: 70%;
+  }
+  .login-page-container {
+    padding: 0px 40px;
+    margin-left: 0;
+  }
 }
