style bug fixes

--- a/web-frontend/src/pages/login/login.css
+++ b/web-frontend/src/pages/login/login.css
@@ -1,6 +1,7 @@
 .login-btn-link {
   text-decoration: none;
   color: var(--primary-white) !important;
+  width: 100%;
 }
 .login-btn-link.active {
   text-decoration: none;
