--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -666,3 +666,28 @@ button.signup-btn {
     padding-right: 10px;
   }
 }
+/* animations */
+/* shake */
+.shake {
+  animation: shake 0.4s 1 linear;
+}
+@keyframes shake {
+  0% {
+    transform: translate(10px);
+  }
+  20% {
+    transform: translate(-10px);
+  }
+  40% {
+    transform: translate(5px);
+  }
+  60% {
+    transform: translate(-5px);
+  }
+  80% {
+    transform: translate(2px);
+  }
+  100% {
+    origin-transform: translate(0px);
+  }
+}
