--- a/web-frontend/src/pages/login/login.css
+++ b/web-frontend/src/pages/login/login.css
@@ -54,10 +54,10 @@
 .login-input-wrapper {
   margin-top: 15px;
 }
-.login-username-input {
+.login-input {
   margin-top: 12px;
 }
-.login-username-input > input {
+.login-input > input {
   display: block;
   padding: 0 15px;
   height: 40px;
@@ -65,6 +65,20 @@
   border: 1px solid var(--primary-border-grey);
   background-color: var(--input-box-background);
   color: var(--primary-black);
+}
+input.error-input {
+  border-color: var(--error-red);
+}
+.required-star {
+  color: var(--error-red);
+  margin-left: 4px;
+}
+.login-error-message {
+  color: var(--error-red);
+  margin-top: 4px;
+  font-size: 1.4rem;
+}
+.login-password-error-message {
 }
 .login-signup-wrapper {
   margin-top: 30px;
