--- a/web-frontend/public/index.css
+++ b/web-frontend/public/index.css
@@ -16,6 +16,9 @@ body {
   --pos-green: rgba(83, 206, 132, 1);
   --neg-red: rgba(255, 95, 95, 1);
   --error-red: #ff1f1f;
+  --error-light-red: #ffebe6;
+  --success-green: #24bf65;
+  --success-light-green: #e3fcef;
   --white: rgba(255, 255, 255, 1);
   --light-white: rgba(248, 248, 248, 1);
   --black: rgba(0, 0, 0, 1);
@@ -37,6 +40,10 @@ body {
   --gap-medium: 25px;
 
   /* dark-mode exceptions */
+  --error-icon-background: #ff5630;
+  --error-light-text: #bf2600;
+  --success-icon-background: #36b37e;
+  --success-light-text: #006644;
   --nav-background: #1f447c;
   --nav-border-sep: #21376c;
   --nav-hover-link-color: #ffe08c;
@@ -55,6 +62,8 @@ body {
   --background: #1a1b1c;
   --pos-green: rgba(83, 206, 132, 1);
   --neg-red: rgba(255, 95, 95, 1);
+  --error-light-red: #bf2600;
+  --success-light-green: #006430;
   --white: rgba(25, 25, 25, 1);
   --light-white: rgb(34 36 40);
   --black: rgba(250, 250, 250, 1);
@@ -68,6 +77,10 @@ body {
   --grey: rgb(198 198 198);
   --primary-border-grey: rgba(69, 69, 69, 1);
   /* dark-mode exceptions */
+  --error-icon-background: #7f1700;
+  --error-light-text: #fff;
+  --success-icon-background: #004b2b;
+  --success-light-text: #fff;
   --nav-background: #1c3c6d;
   --nav-border-sep: #21376c;
   --nav-hover-link-color: #ffe08c;
