--- a/web-frontend/src/components/analytics/analytics.css
+++ b/web-frontend/src/components/analytics/analytics.css
@@ -60,12 +60,12 @@ div.sentiment-det span {
   color: #fff;
 }
 span.sentiment-det-description {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   /* white-space: nowrap; */
 }
 h1.sentiment-det-label {
   margin-bottom: 5px;
-  font-size: 2.6rem;
+  font-size: 2.4rem;
 }
 h1.sentiment-det-polarity-perc {
   margin-top: 30px;
@@ -74,15 +74,15 @@ h1.sentiment-det-polarity-perc {
 div.sentiment-emoji {
   display: flex;
   justify-content: flex-end;
-  margin-right: 20px;
-  align-items: center;
+  /* align-items: center; */
   width: 40%;
-  margin-left: 20px;
+  /* margin-right: 20px; */
+  /* margin-left: 20px; */
 }
 div.sentiment-emoji img {
-  width: 50%;
-  max-width: 120px;
-  min-width: 100px;
+  /* width: 50%; */
+  max-width: 55px;
+  /* min-width: 100px; */
   opacity: 0.8;
-  object-fit: contain;
+  /* object-fit: contain; */
 }
