--- a/web-frontend/src/pages/exkey/exkey.css
+++ b/web-frontend/src/pages/exkey/exkey.css
@@ -198,7 +198,7 @@
 .colourful_mobilePhone {
   margin-left: 140px;
   opacity: 0.8;
-  height: 490px;
+  height: 480px;
   width: 550px;
 }
 
@@ -208,7 +208,6 @@
     display: flex;
     flex-wrap: wrap;
     position: absolute;
-    /* background-color: blue; */
   }
 }
 
@@ -345,7 +344,7 @@
   }
 
   1% {
-    background: var(--color);
+    background: white;
   }
 
   51% {
