--- a/web-frontend/src/pages/index/homepage.css
+++ b/web-frontend/src/pages/index/homepage.css
@@ -35,8 +35,8 @@
     transform: translate3d(0, 0%, 0);
   }
 }
+
 .homepage-welcometxt {
-  color: #222;
   font-family: Roboto, Arial, sans-serif;
   height: 60vmin;
   left: 30%;
@@ -58,7 +58,7 @@
   display: block;
 }
 .homepage-welcometxt > div.welcometxt-top {
-  border-bottom: 1vmin solid #000;
+  border-bottom: 1vmin solid var(--welcome-text-bottom);
   top: 0;
 }
 .homepage-welcometxt > div.welcometxt-top div {
@@ -68,9 +68,10 @@
   transform: translate(0, 100%);
 }
 .homepage-welcometxt > div.welcometxt-top div span {
-  color: #767676;
+  color: var(--welcome-text-top);
 }
 .homepage-welcometxt > div.welcometxt-bottom {
+  color: var(--welcome-text-bottom);
   bottom: 0;
 }
 .homepage-welcometxt > div.welcometxt-bottom div {
@@ -125,7 +126,7 @@
 .hbga-circle {
   position: absolute;
   border-radius: 100%;
-  background: rgb(9, 2, 84);
+  background: var(--bg-annimation);
   animation: ripple 20s infinite;
   box-shadow: 0px 0px 1px 0px #508fb9;
 }
@@ -177,7 +178,7 @@
 }
 
 .circle-shade4 {
-  opacity: 0.9;
+  opacity: 0.8;
 }
 
 .circle-shade5 {
