--- a/web-frontend/src/pages/exkey/exkey.css
+++ b/web-frontend/src/pages/exkey/exkey.css
@@ -180,15 +180,60 @@
   right: -5px;
 }
 
-.analyze_again {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: -3%;
-  margin-right: 320px;
+@media screen and (min-width: 10px) {
+  .analyze_again {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -1%;
+    margin-left: 10%;
+    animation-name: wobble;
+    -webkit-animation-duration: 0.8s;
+    -webkit-animation-timing-function: linear;
+    -webkit-transform-origin: 50% 100%;
+    animation-duration: 2.3s;
+    position: absolute;
+  }
+}
+
+@keyframes wobble {
+  0% {
+    -webkit-transform: none;
+    transform: none;
+  }
+
+  15% {
+    -webkit-transform: translate3d(-25%, 0, 0) rotate3d(0, 0, 1, -5deg);
+    transform: translate3d(-25%, 0, 0) rotate3d(0, 0, 1, -5deg);
+  }
+
+  30% {
+    -webkit-transform: translate3d(20%, 0, 0) rotate3d(0, 0, 1, 3deg);
+    transform: translate3d(20%, 0, 0) rotate3d(0, 0, 1, 3deg);
+  }
+
+  45% {
+    -webkit-transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -3deg);
+    transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -3deg);
+  }
+
+  60% {
+    -webkit-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg);
+    transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg);
+  }
+
+  75% {
+    -webkit-transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -1deg);
+    transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -1deg);
+  }
+
+  100% {
+    -webkit-transform: none;
+    transform: none;
+  }
 }
 
 .colourful_mobilePhone {
-  margin-left: 15%;
+  margin-left: 50%;
   opacity: 0.8;
   height: 31.25vw;
   width: 45vw;
@@ -349,11 +394,17 @@
   margin-top: 100px;
 }
 
-@keyframes zoomin {
+@keyframes fadeIn {
   0% {
-    transform: scale(0);
+    opacity: 0;
+  }
+  25% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 0.8;
   }
   100% {
-    transform: scale(1);
+    opacity: 1;
   }
 }
